apps/headlamp/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-headlamp-ingress
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: headlamp
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 4466
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tailscale
    ports:
    - protocol: TCP
      port: 4466
